--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0",
